<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lastNam"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/restaurant" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#322424"
        android:fontFamily="@font/berkshire_swash"
        android:gravity="center"
        android:text="@string/heading"
        android:textColor="#CAC4C4"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6E6E6"
                android:orientation="horizontal">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <TextView
                        android:id="@+id/detailHead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/berkshire_swash"
                        android:gravity="center"
                        android:text="@string/detailtext"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alegreya_bold"
                            android:gravity="center"
                            android:text="@string/nametext" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alegreya_bold"
                            android:gravity="center"
                            android:text="@string/nametext2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/firstNameInput"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center"
                            android:inputType="text"
                            android:textColor="#000000" />

                        <EditText
                            android:id="@+id/lastNameInput"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center"
                            android:inputType="text"
                            android:textColor="#000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alegreya_bold"
                            android:gravity="center"
                            android:text="@string/phonetext" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alegreya_bold"
                            android:gravity="center"
                            android:text="@string/emailtext" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/phoneInput"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center"
                            android:inputType="phone"
                            android:textColor="#000000" />

                        <EditText
                            android:id="@+id/emailInput"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center"
                            android:inputType="textEmailAddress"
                            android:textColor="#000000" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alegreya_bold"
                            android:gravity="center"
                            android:text="@string/grouptext" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alegreya_bold"
                            android:gravity="center"
                            android:text="@string/smoketext" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/groupInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center"
                            android:inputType="number" />

                        <ToggleButton
                            android:id="@+id/smokebtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:textOff="@string/notog"
                            android:textOn="@string/yestog" />

                    </LinearLayout>

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/black" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <TextView
                        android:id="@+id/dateHead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/berkshire_swash"
                        android:gravity="center"
                        android:text="@string/datetext"
                        android:textSize="24sp" />

                    <DatePicker
                        android:id="@+id/datePicker"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/black" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <TextView
                        android:id="@+id/timeHead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/berkshire_swash"
                        android:gravity="center"
                        android:text="@string/timetext"
                        android:textSize="24sp" />

                    <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:calendarViewShown="false"
                        android:timePickerMode="spinner" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/submitBtn"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="sans-serif-medium"
                                android:shadowColor="#9F5151"
                                android:text="@string/submit"
                                android:textColor="#000000"
                                android:textColorHint="@color/black"
                                app:backgroundTint="#D5D6D6"
                                app:rippleColor="#7C6767"
                                app:strokeColor="#E4D6D6" />

                            <Button
                                android:id="@+id/resetBtn"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="sans-serif-medium"
                                android:shadowColor="#9F5151"
                                android:text="@string/reset"
                                android:textColor="#000000"
                                android:textColorHint="@color/black"
                                app:backgroundTint="#D5D6D6"
                                app:rippleColor="#7C6767"
                                app:strokeColor="#E4D6D6" />
                        </LinearLayout>
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/tvtext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alegreya_bold"
                        android:gravity="center"
                        android:text="@string/finaldetail" />
                    <TextView
                        android:id="@+id/tvdisplay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="" />



                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>


        </ScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>